<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/write_field_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_field_text"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/read_field_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_field_text"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/repeat_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_button_text"
                android:layout_gravity="center"
                android:ems="10"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_weight="50"
                    android:text="@string/checkbox_text"
                    android:textSize="20sp"
                    />

                <Switch
                    android:id="@+id/switch_Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|end"
                    android:layout_weight="50"
                    android:text="@string/switch_text"
                    android:textSize="20sp" />

            </LinearLayout>

            <ToggleButton
                android:id="@+id/dark_theme_ToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textOn="@string/toggle_button_on_text"
                android:textOff="@string/toggle_button_on_text"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>